# libuaecore11

./: .gitignore  README.md  configure.ac
src/: .gitignore  Makefile.am  Makefile.in
src/WinUAE/: newcpu.cpp
src/WinUAE/include/: cpu_prefetch.h  custom.h  events.h  memory.h  newcpu.h  sysconfig.h  sysdeps.h
src/core/: core.cpp  core_api.h  core_glue.cpp  core_glue.h  core_internal.h
src/tools/: .gitignore  Makefile.am  configure.ac
